--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Android version</string>
-    <string name="made_by">Made with ♥ by</string>
+    <string name="made_by" translatable="false">Made by</string>
     <string name="invalid">Invalid</string>
     <string name="codename">Code name: %s\n</string>
     <string name="version">Version: %s (API %d)\n</string>
